HW6 -  Исправления замечаний от 26.08.2023