@@ -5,6 +5,7 @@ import ru.javawebinar.basejava.model.Resume;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Array based storage for Resumes
@@ -62,9 +63,10 @@ public abstract class AbstractArrayStorage extends AbstractStorage {
         return (int) searchKey >= 0;
     }
 
+
     @Override
-    public List<Resume> getAllSorted() {
-        return Arrays.stream(Arrays.copyOf(storage, size)).toList();
+    protected List<Resume> doGetAll() {
+        return Arrays.stream(Arrays.copyOf(storage, size)).collect(Collectors.toList());
     }
 
     protected abstract void insertResume(Resume r);
